[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/themes/PauseMenu.tres" type="Theme" id=1]
[ext_resource path="res://scripts/menu/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/Controls.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/BROMPH_TOWN.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Backgrorund" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.552941, 0.533333, 0.533333, 0.576471 )

[node name="MenuHolder" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -66.0
margin_bottom = 66.0

[node name="Continue_btn" type="Button" parent="MenuHolder"]
margin_right = 1440.0
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Continuar"

[node name="SeeControls_btn" type="Button" parent="MenuHolder"]
margin_top = 34.0
margin_right = 1440.0
margin_bottom = 64.0
theme = ExtResource( 1 )
text = "Ver Controles"

[node name="Restart_btn" type="Button" parent="MenuHolder"]
margin_top = 68.0
margin_right = 1440.0
margin_bottom = 98.0
theme = ExtResource( 1 )
text = "Reiniciar"

[node name="Quit_btn" type="Button" parent="MenuHolder"]
margin_top = 102.0
margin_right = 1440.0
margin_bottom = 132.0
theme = ExtResource( 1 )
text = "Sair"

[node name="ControlsLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PlayerOneText" type="TextEdit" parent="ControlsLayer"]
anchor_bottom = 1.0
margin_right = 729.0
margin_bottom = -449.0
theme = ExtResource( 3 )
text = "							Jogador 1

							W - Pular

							S - Rolar

							A - Esquerda

							D - Direita

							F - Socar

							Q - Bloquear"
readonly = true

[node name="PlayerTwoText" type="TextEdit" parent="ControlsLayer"]
anchor_bottom = 1.0
margin_left = 726.0
margin_top = 1.0
margin_right = 1440.0
margin_bottom = -446.0
theme = ExtResource( 3 )
text = "						Jogador 2

				Seta para cima - Pular
				
				Seta para baixo - Rolar
				
				Seta para esquerda - Esquerda
				
				Seta para direita - Direita
				
				Page Down - Socar
				
				Page Up - Bloquear"
readonly = true

[node name="CombosText" type="TextEdit" parent="ControlsLayer"]
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 450.0
margin_right = 1441.0
margin_bottom = 1.0
theme = ExtResource( 3 )
text = "																	Combos
		Soco no ar - Dash
		
		Rolar, Soco - Rasteira
		
		Direita Esquerda - Jogar Item
		
		Direita, Soco - Especial 1
		
		Rolar, Rolar - Especial 2
		
		Bloquear, (Esquerda ou Direita) - Dash para Tras"
readonly = true

[node name="Return_btn" type="Button" parent="ControlsLayer"]
margin_left = 6.0
margin_top = 7.0
margin_right = 149.0
margin_bottom = 86.0
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.544922, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "<> Voltar <>"

[connection signal="pressed" from="MenuHolder/Continue_btn" to="." method="_on_Continue_btn_pressed"]
[connection signal="pressed" from="MenuHolder/SeeControls_btn" to="." method="_on_SeeControls_btn_pressed"]
[connection signal="pressed" from="MenuHolder/Restart_btn" to="." method="_on_Restart_btn_pressed"]
[connection signal="pressed" from="MenuHolder/Quit_btn" to="." method="_on_Quit_btn_pressed"]
[connection signal="pressed" from="ControlsLayer/Return_btn" to="." method="_on_Return_btn_pressed"]
